launch 5 instances - no status checking

--- a/ec2.cfg
+++ b/ec2.cfg
@@ -1,10 +1,15 @@
 # Environment variables for EC2 mgmt
 
-# Key pair
+# Security
 KEY=ScaleTest
 KEY_DIR=~/projects/.aws
 KEY_FILE=$KEY_DIR/$KEY.pem
-
-# Security group
 SG=sg-cfae8aaa
 
+# Network
+VPC=vpc-de9c60bb
+SUBNET=subnet-265b4f52
+
+# Machines
+LINUX_AMI=ami-76817c1e
+LINUX_TYPE=t2.micro
