Move remaining launch variables to config file

--- a/ec2.cfg
+++ b/ec2.cfg
@@ -10,6 +10,9 @@ SG=sg-cfae8aaa
 VPC=vpc-de9c60bb
 SUBNET=subnet-265b4f52
 
-# Machines
-LINUX_AMI=ami-76817c1e
-LINUX_TYPE=t2.micro
+# Machine
+AMI=ami-76817c1e
+
+# Instance
+INST_TYPE=t2.micro
+INST_COUNT=5
