status checks after launch; control by tag rather than key pair

--- a/ec2.cfg
+++ b/ec2.cfg
@@ -16,3 +16,9 @@ AMI=ami-76817c1e
 # Instance
 INST_TYPE=t2.micro
 INST_COUNT=5
+INST_NAME=ScaleTest
+
+# Volume
+VOL_SIZE=8
+VOL_ZONE=us-east-1b
+VOL_DEV=/dev/sdb
